--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,6 @@ spring.jpa.hibernate.use-new-id-generator-mappings = false
 #logging.level.root=TRACE                     # default for everything
 #logging.level.com.abror.demo.controller=TRACE  # for your controllers package
 
+
+server.error.whitelabel.enabled=false
 #name: Semangat ABROR!
